--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div>
                 <label for="email">E-mail:</label>
-                <input type="text" id="email" name="email" placeholder="your email" required>
+                <input type="email" id="email" name="email" placeholder="your email" required>
             </div>
             <div>
                 <label for="message">Messages:</label>
@@ -106,6 +106,7 @@
             </div>
         </form>
     </footer>
+    
 
 </body>
 
